# library

./: .env  .gitignore  CHANGELOG.md  compose.dev.yml  compose.prod.yml  compose.test.yml  compose.yml  main.py  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  pre-commit  pyproject.toml  seed.sql  stories.md  traefik.yaml
.github/workflows/: auth.yml  docker-build-publish.yml  e2e-test.yml  release-please.yml  test.yml  ts.yml
.zed/: settings.json
authorization/: .dockerignore  .env  .gitignore  Dockerfile  main.py  pyproject.toml
authorization/auth/: app.py  database.py  dependencies.py  models.py  service.py  test_service.py
authorization/auth/api/: router.py
authorization/authorization.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
comp-library/: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.browser.config.ts
comp-library/src/lib/: index.ts
comp-library/src/lib/components/Form/: FieldSet.svelte  Form.svelte  index.ts
comp-library/src/lib/components/RoomBooking/: RoomBooker.svelte  (+5 more)
comp-library/src/lib/ui/: Button.svelte  Spinner.svelte  index.ts
comp-library/src/routes/: +page.svelte
comp-library/tests/: roombooking.test.ts
comp-library/vitest-example/: HelloWorld.test.ts
data/certs/: local.crt  local.key
fast-graphql/: .env  .gitignore  Dockerfile  alembic.ini  compose.yaml  main.py  pyproject.toml  requirements.txt
fast-graphql/alembic/: env.py
fast-graphql/alembic/versions/: 0b03236e1a48_add_about_colomn.py  1351a8db650c_add_more_optional_columns_to_user.py  2026_01_28_add_title_to_books.py  22e6c2e64f36_add_to_emial_to_table_users.py  368c8f30b56d_add_username_column.py  3bb4a76d3971_delete_campos_start_hour_end_hour_and_.py  6efddc2153ea_user_id_as_foregin_key.py  7017c444da1d_changed_end___strat_date_to_hours_.py  96143e9df75e_add_conference_rooms_and_bookings.py  96b06920d228_add_username_column_to_user.py  9f963f8cfce0_initial_migration_authors_books_reading_.py  b0dc967e2d44_changed_end___strat_date_to_hours_.py  f3339817ded5_create_user_table_and_establish_.py
fast-graphql/app/: __main__.py  app.py  broadcast.py  config.py  database.py  dependencies.py  main.py
fast-graphql/app/models/: author.py  book.py  conference_room.py  reading_state.py  room_booking.py  room_bookings.py  user.py
fast-graphql/app/permissions/: authenticated.py  authorized.py  rate_limiting.py
fast-graphql/app/schema/: __init__.py  convertors.py  inputs.py  loaders.py  mutations.py  queries.py  subscriptions.py  types.py
fast-graphql/app/services/: __init__.py  auth_service.py  author_service.py  base.py  book_service.py  conference_room_service.py  reading_state_service.py  room_booking_service.py  user_service.py
fast-graphql/app/utils/: auth.py  permissions.py
fast-graphql/tests/: test_book_service.py
svelte-graphql/: .env  Dockerfile  Dockerfile.dev  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
svelte-graphql/fast-graphql/svelte-graphql/: .gitignore  Dockerfile  Dockerfile.dev  houdini.config.js  package.json  pnpm-lock.yaml  schema.graphql  svelte.config.js  tailwind.config.ts  vite.config.ts
svelte-graphql/fast-graphql/svelte-graphql/src/: app.d.ts  app.html  client.ts  hooks.server.ts
svelte-graphql/fast-graphql/svelte-graphql/tests/: browser.ts  first.test.ts
svelte-graphql/src/: app.html  hooks.server.ts
svelte-graphql/src/lib/components/: AuthorForm.svelte  AuthorsList.svelte  Book.svelte  BookForm.svelte  Categories.svelte  ChatMessage.svelte  PaginationNav.svelte  Reading.svelte  ReadingModal_2.svelte  UserForm.svelte
svelte-graphql/src/lib/questions/: questions.ts
svelte-graphql/src/lib/server/: auth.ts
svelte-graphql/src/lib/utils/: loader.svelte.ts  useViewportActions.ts
svelte-graphql/src/routes/: +layout.server.ts  +page.svelte  app.css  layout.css
svelte-graphql/src/routes/(authenticated)/: +layout.server.ts
svelte-graphql/src/routes/login/: +page.server.ts
svelte-graphql/src/routes/me/: +page.server.ts
svelte-graphql/src/routes/stylequiz/: +page.svelte
svelte-graphql/tests/: first.test.ts
tests/: author.test.ts  bookRoom.test.ts  home.test.ts
(+84 files in other folders)
