[project]
name = "backend-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "graphviz>=0.21",
    "pydantic[email]>=2.12.5",
    "ruff>=0.15.5",
]

[tool.uv.sources]
fast-graphql = { workspace = true }
authorization = { workspace = true }


[tool.uv.workspace]
members = [
    "fast-graphql",
    "authorization",
]
#exclude = ["./node_modules","./svelte-graphql", "./comp-library"]
