[project]
name = "authorization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.128.0",
    "pydantic[email]==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-dotenv==1.2.1",
    "uvicorn==0.40.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "sqlalchemy==2.0.46",
    "aiomysql>=0.3.2",
]


[project.scripts]
start = "auth.app:start"
